--- a/index.html
+++ b/index.html
@@ -1,18 +1,110 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Airbnb | Melbourne</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Airbnb(recreate)</title>
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="css\main.css">
+</head>
 
-    <!-- Google Font embed -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900" rel="stylesheet">
+<body>
+  <header>
+    <div class="main_nav flex">
+      <div>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/logo.png" width="80px" alt="web_logo">
+      </div>
+      <nav class="nav1">
+        <a href="#">Sign up</a>
+        <a href="#">Login</a>
+      </nav>
+    </div>
 
-  </head>
-  <body>
-    
- <!-- Logo: https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/logo.png -->
+  </header>
+
+  <div class="banner__container">
+    <div class="bg_nav flex">
+      <h1 style="font-weight: bolder;font-size: xxx-large;">Melbourne</h1>
+      <p style="font-weight: bold;">From footy to fashion, the cultural capital of Australia dares to stay in the cutting edge.</p>
+      <a href="#">Find a neighbourhood</a>
+    </div>
+  </div>
+
+  <div class="grid_c2">
+    <div class="border">
+      <p style="font-weight: bolder;">Locals Love</p>
+      <div class="local_space flex">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/heart.png" width="150px">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ducimus cum quasi qui? Sequi neque rem harum recusandae quae libero dolore asperiores veniam facere repellat, excepturi, sit exercitationem, et iste.</p>
+      </div>
+    </div>
+    <div class="border">
+      <p style="font-weight: bolder;">Locals complaint about</p>
+      <div class="local_space flex">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/chat.png" width="150px">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ducimus cum quasi qui? Sequi neque rem harum recusandae quae libero dolore asperiores veniam facere repellat, excepturi, sit exercitationem, et iste.</p>
+      </div>
+    </div>
+  </div>
+
+  <main>
+    <div class="flex main_text">
+      <h1>Featured Neighbourhood</h1>
+      <p style="font-weight: bold;">Explore 19 Melbourne neighbourhood. Which are for you?</p>
+    </div>
+
+    <div class="grid_c3">
+
+      <div class="border_1">
+        <div class="c1_bg ">
+          <h2>Fitzroy</h2>
+          <p>Barista.Beards.Bikes</p>
+        </div>
+        <p class="alignitemscenter">Hip Terrace Houses Anything Goes Vintage Clothing</p>
+      </div>
+
+      <div class="border_1">
+        <div class="c2_bg">
+          <h2>Fitzroy</h2>
+          <p>Barista.Beards.Bikes</p>
+        </div>
+        <p class="alignitemscenter">Hip Terrace Houses Anything Goes Vintage Clothing</p>
+      </div>
+
+      <div class="border_1">
+        <div class="c3_bg">
+          <h2>Fitzroy</h2>
+          <p>Barista.Beards.Bikes</p>
+        </div>
+        <p class="alignitemscenter">Hip Terrace Houses Anything Goes Vintage Clothing</p>
+      </div>
+
+    </div>
+
+    <div class="request">
+      <a href="#" style="text-decoration: none; font-size:large; font-weight: bold; color: white;">Find a neighbourhood</a>
+    </div>
+
+  </main>
+</body>
+<footer>
+
+  <div class="line"></div>
+  
+  <p style="color: white;">@Airbnb(for fewd class)</p>
+
+</footer>
+</html>
+
+
+
+
+
+
+<!-- Logo: https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/logo.png -->
  <!-- Heart icon: https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/heart.png -->
  <!-- Chat icon: https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/chat.png -->
-    <p>Make it look like this:</p>
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/airbnb-solution-image.jpg" alt="solution" style="width:1200px;" />
-  </body>
-</html>
+
+ <!-- <p>Make it look like this:</p>
+    <img src= "https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/airbnb-solution-image.jpg" alt="solution" style="width:1200px;"/> -->
