--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <main>
     <div class="flex main_text">
       <h1>Featured Neighbourhood</h1>
-      <p style="font-weight: bold;">Explore 19 Melbourne neighbourhood. Which are for you?</p>
+      <p>Explore 19 Melbourne neighbourhood. Which are for you?</p>
     </div>
 
     <div class="grid_c3">
